test/files/neg/t5589neg.check
t5589neg.scala:24: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: String
  def f5(x: Either[Int, String])        = for ((y1, y2: String) <- x.right) yield ((y1, y2))
                                               ^
t5589neg.scala:25: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: String
  def f6(x: Either[Int, String])        = for ((y1, y2: Any) <- x.right) yield ((y1, y2))
                                               ^
t5589neg.scala:26: error: constructor cannot be instantiated to expected type;
 found   : (T1,)
 required: (String, Int)
  def f7(x: Either[Int, (String, Int)]) = for (y1 @ Tuple1(y2) <- x.right) yield ((y1, y2))
                                                    ^
t5589neg.scala:26: error: not found: value y2
  def f7(x: Either[Int, (String, Int)]) = for (y1 @ Tuple1(y2) <- x.right) yield ((y1, y2))
                                                                                       ^
t5589neg.scala:27: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: (String, Int)
  def f8(x: Either[Int, (String, Int)]) = for ((y1, y2, y3) <- x.right) yield ((y1, y2))
                                               ^
t5589neg.scala:27: error: not found: value y1
  def f8(x: Either[Int, (String, Int)]) = for ((y1, y2, y3) <- x.right) yield ((y1, y2))
                                                                                ^
t5589neg.scala:27: error: not found: value y2
  def f8(x: Either[Int, (String, Int)]) = for ((y1, y2, y3) <- x.right) yield ((y1, y2))
                                                                                    ^
7 errors found
